# mem-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: memory_benchmarks.rs
changelog.d/: 20251228_012500_cicd_setup.md  20251228_025438_migrate_rust_nightly.md
experiments/: async_example.rs  readme_example1.rs  readme_example2.rs  readme_example3.rs
src/: alloc.rs  async_mem.rs  base.rs  file_mapped.rs  global.rs  internal.rs  lib.rs  prealloc.rs  raw_mem.rs  raw_place.rs  temp_file.rs  traits.rs
tests/: coverage.rs  internal.rs  mem.rs  miri.rs  prealloc.rs  tests.rs
