[package]
name = "platform-mem"
version = "0.1.0-pre+beta.2"
edition = "2021"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/linksplatform/mem-rs"
homepage = "https://github.com/linksplatform/mem-rs"
description = """
Memory for linksplatform
"""

[dependencies]
memmap2 = "0.7"
tempfile = "3.3"
thiserror = "1.0"

[dev-dependencies]
paste = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[example]]
name = "readme_example1"
path = "experiments/readme_example1.rs"

[[example]]
name = "readme_example2"
path = "experiments/readme_example2.rs"

[[example]]
name = "readme_example3"
path = "experiments/readme_example3.rs"
